[package]
name = "rust-nr"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.15"       # Main array library
ndarray-rand = "0.14"  # Extensions for random generation
rand = "0.8"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
# Note: You may need to install OpenBLAS on your computer first!